v1.0.0/modules/schema/pages/class/FinancialInfo.adoc
= `FinancialInfo`
:toclevels: 4


+++Various current financial properties associated with a particular asset. Historical properties may be determined by ActivityRecords associated with the asset.+++


[cols="h,3",width=65%]
|===
| Type
| Class

| URI
| `cim:FinancialInfo`


| CIM standard (perspective)
| IEC61968 (Enterprise)



|===

== Class hierarchy
* xref::class/IdentifiedObject.adoc[`IdentifiedObject`]
** *`FinancialInfo`*


== Slots



.Associated classes
[d2,svg,theme=4]
----
vars: {
  d2-config: {
    pad: 20
  }
}
FinancialInfo {
  style {
    fill: "#d1e7c2"
    shadow: true
  }
}







IntegerQuantity {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



Asset {
  style {
    fill: "#d1e7c2"
    shadow: true
  }
}



DiagramObject {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



InstanceSet {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



Name {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



ChangeSetMember {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



ChangeSetMember {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}






FinancialInfo -> IntegerQuantity: quantity


FinancialInfo -> Asset: Asset


FinancialInfo -> DiagramObject: DiagramObjects


FinancialInfo -> InstanceSet: InstanceSet


FinancialInfo -> Name: Names


FinancialInfo -> ChangeSetMember: PropertiesCIMDataObject


FinancialInfo -> ChangeSetMember: TargetingCIMDataObject


legend: "" {
  style: {
    fill: transparent
    stroke: transparent
  }
  grid-rows: 3
  grid-columns: 2
  grid-gap: 10
  near: bottom-right
  iec61968_color: "" {
    style: {
      fill: "#d1e7c2"
      stroke: black
      stroke-width: 1
    }
    width: 10
    height: 10
  }
  iec61968_text: "IEC61968 (Enterprise)" {
    shape: text
  }
  iec61970_color: "" {
    style: {
      fill: "#eccfcb"
      stroke: black
      stroke-width: 1
    }
    width: 10
    height: 10
  }
  iec61970_text: "IEC61970 (Grid)" {
    shape: text
  }
  iec62325_color: "" {
    style: {
      fill: "#fffbef"
      stroke: black
      stroke-width: 1
    }
    width: 10
    height: 10
  }
  iec62325_text: "IEC62325 (Market)" {
    shape: text
  }
}
----


[cols="3,1,3,6",width=100%]
|===
| Name | Cardinality | Type | Description

| <<InstanceSet,`InstanceSet`>>
| 1
| xref::class/InstanceSet.adoc[`InstanceSet`]
| +++Dataset containing the data objects.+++

| <<Asset,`Asset`>>
| 0..1
| xref::class/Asset.adoc[`Asset`]
| +++The asset to which this financial information relates.+++

| <<account,`account`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++The account to which this actual material item is charged.+++

| <<actualPurchaseCost,`actualPurchaseCost`>>
| 0..1
| xref::class/Money.adoc[`Money`]
| +++The actual purchase cost of this particular asset.+++

| <<costDescription,`costDescription`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++Description of the cost.+++

| <<costType,`costType`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++Type of cost to which this Material Item belongs.+++

| <<financialValue,`financialValue`>>
| 0..1
| xref::class/Money.adoc[`Money`]
| +++Value of asset as of 'valueDateTime'.+++

| <<plantTransferDateTime,`plantTransferDateTime`>>
| 0..1
| https://w3id.org/linkml/Date[`date`]
| +++Date and time asset's financial value was put in plant for regulatory accounting purposes (e.g., for rate base calculations). This is sometime referred to as the "in-service date".+++

| <<purchaseDateTime,`purchaseDateTime`>>
| 0..1
| https://w3id.org/linkml/Date[`date`]
| +++Date and time asset was purchased.+++

| <<purchaseOrderNumber,`purchaseOrderNumber`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++Purchase order identifier.+++

| <<quantity,`quantity`>>
| 0..1
| xref::class/IntegerQuantity.adoc[`IntegerQuantity`]
| +++The quantity of the asset if per unit length, for example conductor.+++

| <<valueDateTime,`valueDateTime`>>
| 0..1
| https://w3id.org/linkml/Date[`date`]
| +++Date and time at which the financial value was last established.+++

| <<warrantyEndDateTime,`warrantyEndDateTime`>>
| 0..1
| https://w3id.org/linkml/Date[`date`]
| +++Date and time warranty on asset expires.+++

| <<PropertiesCIMDataObject,`PropertiesCIMDataObject`>>
| 0..1
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]
| +++The single CIM data object in the appropriate dataset context.+++

| <<aliasName,`aliasName`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++The aliasName is free text human readable name of the object alternative to IdentifiedObject.name. It may be non unique and may not correlate to a naming hierarchy.
The attribute aliasName is retained because of backwards compatibility between CIM relases. It is however recommended to replace aliasName with the Name class as aliasName is planned for retirement at a future time.+++

| <<description,`description`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++The description is a free human readable text describing or naming the object. It may be non unique and may not correlate to a naming hierarchy.+++

| <<mRID,`mRID`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++Master resource identifier issued by a model authority. The mRID is unique within an exchange context. Global uniqueness is easily achieved by using a UUID, as specified in RFC 4122, for the mRID. The use of UUID is strongly recommended.
For CIMXML data files in RDF syntax conforming to IEC 61970-552, the mRID is mapped to rdf:ID or rdf:about attributes that identify CIM object elements.+++

| <<name,`name`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++The name is any free human readable and possibly non unique text naming the object.+++

| <<DiagramObjects,`DiagramObjects`>>
| 0..*
| xref::class/DiagramObject.adoc[`DiagramObject`]
| +++The diagram objects that are associated with the domain object.+++

| <<Names,`Names`>>
| 0..*
| xref::class/Name.adoc[`Name`]
| +++All names of this identified object.+++

| <<TargetingCIMDataObject,`TargetingCIMDataObject`>>
| 0..*
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]
| +++Data objects registered.+++
|===

'''


//[discrete]
[#account]
=== `account`
+++The account to which this actual material item is charged.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:FinancialInfo.account`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]


|===

//[discrete]
[#actualPurchaseCost]
=== `actualPurchaseCost`
+++The actual purchase cost of this particular asset.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:FinancialInfo.actualPurchaseCost`
| Cardinality
| 0..1
| Type
| xref::class/Money.adoc[`Money`]


|===

//[discrete]
[#aliasName]
=== `aliasName`
+++The aliasName is free text human readable name of the object alternative to IdentifiedObject.name. It may be non unique and may not correlate to a naming hierarchy.
The attribute aliasName is retained because of backwards compatibility between CIM relases. It is however recommended to replace aliasName with the Name class as aliasName is planned for retirement at a future time.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.aliasName`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#Asset]
=== `Asset`
+++The asset to which this financial information relates.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:FinancialInfo.Asset`
| Cardinality
| 0..1
| Type
| xref::class/Asset.adoc[`Asset`]


|===

//[discrete]
[#costDescription]
=== `costDescription`
+++Description of the cost.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:FinancialInfo.costDescription`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]


|===

//[discrete]
[#costType]
=== `costType`
+++Type of cost to which this Material Item belongs.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:FinancialInfo.costType`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]


|===

//[discrete]
[#description]
=== `description`
+++The description is a free human readable text describing or naming the object. It may be non unique and may not correlate to a naming hierarchy.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.description`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#DiagramObjects]
=== `DiagramObjects`
+++The diagram objects that are associated with the domain object.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.DiagramObjects`
| Cardinality
| 0..*
| Type
| xref::class/DiagramObject.adoc[`DiagramObject`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#financialValue]
=== `financialValue`
+++Value of asset as of 'valueDateTime'.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:FinancialInfo.financialValue`
| Cardinality
| 0..1
| Type
| xref::class/Money.adoc[`Money`]


|===

//[discrete]
[#InstanceSet]
=== `InstanceSet`
+++Dataset containing the data objects.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.InstanceSet`
| Cardinality
| 1
| Type
| xref::class/InstanceSet.adoc[`InstanceSet`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#mRID]
=== `mRID`
+++Master resource identifier issued by a model authority. The mRID is unique within an exchange context. Global uniqueness is easily achieved by using a UUID, as specified in RFC 4122, for the mRID. The use of UUID is strongly recommended.
For CIMXML data files in RDF syntax conforming to IEC 61970-552, the mRID is mapped to rdf:ID or rdf:about attributes that identify CIM object elements.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.mRID`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#name]
=== `name`
+++The name is any free human readable and possibly non unique text naming the object.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.name`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#Names]
=== `Names`
+++All names of this identified object.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.Names`
| Cardinality
| 0..*
| Type
| xref::class/Name.adoc[`Name`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#plantTransferDateTime]
=== `plantTransferDateTime`
+++Date and time asset's financial value was put in plant for regulatory accounting purposes (e.g., for rate base calculations). This is sometime referred to as the "in-service date".+++

[cols="h,4",width=65%]
|===
| URI
| `cim:FinancialInfo.plantTransferDateTime`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Date[`date`]


|===

//[discrete]
[#PropertiesCIMDataObject]
=== `PropertiesCIMDataObject`
+++The single CIM data object in the appropriate dataset context.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.PropertiesCIMDataObject`
| Cardinality
| 0..1
| Type
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#purchaseDateTime]
=== `purchaseDateTime`
+++Date and time asset was purchased.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:FinancialInfo.purchaseDateTime`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Date[`date`]


|===

//[discrete]
[#purchaseOrderNumber]
=== `purchaseOrderNumber`
+++Purchase order identifier.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:FinancialInfo.purchaseOrderNumber`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]


|===

//[discrete]
[#quantity]
=== `quantity`
+++The quantity of the asset if per unit length, for example conductor.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:FinancialInfo.quantity`
| Cardinality
| 0..1
| Type
| xref::class/IntegerQuantity.adoc[`IntegerQuantity`]


|===

//[discrete]
[#TargetingCIMDataObject]
=== `TargetingCIMDataObject`
+++Data objects registered.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.TargetingCIMDataObject`
| Cardinality
| 0..*
| Type
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#valueDateTime]
=== `valueDateTime`
+++Date and time at which the financial value was last established.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:FinancialInfo.valueDateTime`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Date[`date`]


|===

//[discrete]
[#warrantyEndDateTime]
=== `warrantyEndDateTime`
+++Date and time warranty on asset expires.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:FinancialInfo.warrantyEndDateTime`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Date[`date`]


|===


