v1.1.0/modules/schema/pages/class/FinancialInfo.adoc
= `FinancialInfo`
:toclevels: 4


+++Various current financial properties associated with a particular asset. Historical properties may be determined by ActivityRecords associated with the asset.+++


[cols="h,3",width=65%]
|===
| Type
| Class

| URI
| `cim:FinancialInfo`


| CIM standard (perspective)
| IEC61968 (Enterprise)



|===

== Class hierarchy
* xref::class/IdentifiedObject.adoc[`IdentifiedObject`]
** *`FinancialInfo`*


== Slots




[cols="1,1,2,1",width=100%]
|===
| Name | Type | Description | Inherited from

| <<Asset,`Asset`>>
//| [[slots_table.Asset]]<<Asset,`Asset`>>
| 0..1 +
xref::class/Asset.adoc[`Asset`]
| +++The asset to which this financial information relates.+++
| _n/a_

| <<account,`account`>>
//| [[slots_table.account]]<<account,`account`>>
| 0..1 +
https://w3id.org/linkml/String[`string`]
| +++The account to which this actual material item is charged.+++
| _n/a_

| <<actualPurchaseCost,`actualPurchaseCost`>>
//| [[slots_table.actualPurchaseCost]]<<actualPurchaseCost,`actualPurchaseCost`>>
| 0..1 +
xref::class/Money.adoc[`Money`]
| +++The actual purchase cost of this particular asset.+++
| _n/a_

| <<costDescription,`costDescription`>>
//| [[slots_table.costDescription]]<<costDescription,`costDescription`>>
| 0..1 +
https://w3id.org/linkml/String[`string`]
| +++Description of the cost.+++
| _n/a_

| <<costType,`costType`>>
//| [[slots_table.costType]]<<costType,`costType`>>
| 0..1 +
https://w3id.org/linkml/String[`string`]
| +++Type of cost to which this Material Item belongs.+++
| _n/a_

| <<financialValue,`financialValue`>>
//| [[slots_table.financialValue]]<<financialValue,`financialValue`>>
| 0..1 +
xref::class/Money.adoc[`Money`]
| +++Value of asset as of 'valueDateTime'.+++
| _n/a_

| <<plantTransferDateTime,`plantTransferDateTime`>>
//| [[slots_table.plantTransferDateTime]]<<plantTransferDateTime,`plantTransferDateTime`>>
| 0..1 +
https://w3id.org/linkml/Date[`date`]
| +++Date and time asset's financial value was put in plant for regulatory accounting purposes (e.g., for rate base...+++
| _n/a_

| <<purchaseDateTime,`purchaseDateTime`>>
//| [[slots_table.purchaseDateTime]]<<purchaseDateTime,`purchaseDateTime`>>
| 0..1 +
https://w3id.org/linkml/Date[`date`]
| +++Date and time asset was purchased.+++
| _n/a_

| <<purchaseOrderNumber,`purchaseOrderNumber`>>
//| [[slots_table.purchaseOrderNumber]]<<purchaseOrderNumber,`purchaseOrderNumber`>>
| 0..1 +
https://w3id.org/linkml/String[`string`]
| +++Purchase order identifier.+++
| _n/a_

| <<quantity,`quantity`>>
//| [[slots_table.quantity]]<<quantity,`quantity`>>
| 0..1 +
xref::class/IntegerQuantity.adoc[`IntegerQuantity`]
| +++The quantity of the asset if per unit length, for example conductor.+++
| _n/a_

| <<valueDateTime,`valueDateTime`>>
//| [[slots_table.valueDateTime]]<<valueDateTime,`valueDateTime`>>
| 0..1 +
https://w3id.org/linkml/Date[`date`]
| +++Date and time at which the financial value was last established.+++
| _n/a_

| <<warrantyEndDateTime,`warrantyEndDateTime`>>
//| [[slots_table.warrantyEndDateTime]]<<warrantyEndDateTime,`warrantyEndDateTime`>>
| 0..1 +
https://w3id.org/linkml/Date[`date`]
| +++Date and time warranty on asset expires.+++
| _n/a_

| <<DiagramObjects,`DiagramObjects`>>
//| [[slots_table.DiagramObjects]]<<DiagramObjects,`DiagramObjects`>>
| 0..* +
xref::class/DiagramObject.adoc[`DiagramObject`]
| +++The diagram objects that are associated with the domain object.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<InstanceSet,`InstanceSet`>>
//| [[slots_table.InstanceSet]]<<InstanceSet,`InstanceSet`>>
| 1 +
xref::class/InstanceSet.adoc[`InstanceSet`]
| +++Dataset containing the data objects.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<Names,`Names`>>
//| [[slots_table.Names]]<<Names,`Names`>>
| 0..* +
xref::class/Name.adoc[`Name`]
| +++All names of this identified object.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<PropertiesCIMDataObject,`PropertiesCIMDataObject`>>
//| [[slots_table.PropertiesCIMDataObject]]<<PropertiesCIMDataObject,`PropertiesCIMDataObject`>>
| 0..1 +
xref::class/ChangeSetMember.adoc[`ChangeSetMember`]
| +++The single CIM data object in the appropriate dataset context.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<TargetingCIMDataObject,`TargetingCIMDataObject`>>
//| [[slots_table.TargetingCIMDataObject]]<<TargetingCIMDataObject,`TargetingCIMDataObject`>>
| 0..* +
xref::class/ChangeSetMember.adoc[`ChangeSetMember`]
| +++Data objects registered.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<aliasName,`aliasName`>>
//| [[slots_table.aliasName]]<<aliasName,`aliasName`>>
| 0..1 +
https://w3id.org/linkml/String[`string`]
| +++The aliasName is free text human readable name of the object alternative to IdentifiedObject.name. It may be non unique and...+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<description,`description`>>
//| [[slots_table.description]]<<description,`description`>>
| 0..1 +
https://w3id.org/linkml/String[`string`]
| +++The description is a free human readable text describing or naming the object. It may be non unique and may not correlate to...+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<mRID,`mRID`>>
//| [[slots_table.mRID]]<<mRID,`mRID`>>
| 0..1 +
https://w3id.org/linkml/String[`string`]
| +++Master resource identifier issued by a model authority. The mRID is unique within an exchange context. Global uniqueness is...+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<name,`name`>>
//| [[slots_table.name]]<<name,`name`>>
| 0..1 +
https://w3id.org/linkml/String[`string`]
| +++The name is any free human readable and possibly non unique text naming the object.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]
|===

'''


//[discrete]
[#account]
=== `account`
+++The account to which this actual material item is charged.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:FinancialInfo.account`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]


|===

////
[.text-left]
--
<<slots_table.account,&#10548;>>
--
////


//[discrete]
[#actualPurchaseCost]
=== `actualPurchaseCost`
+++The actual purchase cost of this particular asset.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:FinancialInfo.actualPurchaseCost`
| Cardinality
| 0..1
| Type
| xref::class/Money.adoc[`Money`]


|===

////
[.text-left]
--
<<slots_table.actualPurchaseCost,&#10548;>>
--
////


//[discrete]
[#aliasName]
=== `aliasName`
+++The aliasName is free text human readable name of the object alternative to IdentifiedObject.name. It may be non unique and may not correlate to a naming hierarchy.
The attribute aliasName is retained because of backwards compatibility between CIM relases. It is however recommended to replace aliasName with the Name class as aliasName is planned for retirement at a future time.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.aliasName`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.aliasName,&#10548;>>
--
////


//[discrete]
[#Asset]
=== `Asset`
+++The asset to which this financial information relates.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:FinancialInfo.Asset`
| Cardinality
| 0..1
| Type
| xref::class/Asset.adoc[`Asset`]


|===

////
[.text-left]
--
<<slots_table.Asset,&#10548;>>
--
////


//[discrete]
[#costDescription]
=== `costDescription`
+++Description of the cost.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:FinancialInfo.costDescription`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]


|===

////
[.text-left]
--
<<slots_table.costDescription,&#10548;>>
--
////


//[discrete]
[#costType]
=== `costType`
+++Type of cost to which this Material Item belongs.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:FinancialInfo.costType`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]


|===

////
[.text-left]
--
<<slots_table.costType,&#10548;>>
--
////


//[discrete]
[#description]
=== `description`
+++The description is a free human readable text describing or naming the object. It may be non unique and may not correlate to a naming hierarchy.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.description`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.description,&#10548;>>
--
////


//[discrete]
[#DiagramObjects]
=== `DiagramObjects`
+++The diagram objects that are associated with the domain object.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.DiagramObjects`
| Cardinality
| 0..*
| Type
| xref::class/DiagramObject.adoc[`DiagramObject`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.DiagramObjects,&#10548;>>
--
////


//[discrete]
[#financialValue]
=== `financialValue`
+++Value of asset as of 'valueDateTime'.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:FinancialInfo.financialValue`
| Cardinality
| 0..1
| Type
| xref::class/Money.adoc[`Money`]


|===

////
[.text-left]
--
<<slots_table.financialValue,&#10548;>>
--
////


//[discrete]
[#InstanceSet]
=== `InstanceSet`
+++Dataset containing the data objects.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.InstanceSet`
| Cardinality
| 1
| Type
| xref::class/InstanceSet.adoc[`InstanceSet`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.InstanceSet,&#10548;>>
--
////


//[discrete]
[#mRID]
=== `mRID`
+++Master resource identifier issued by a model authority. The mRID is unique within an exchange context. Global uniqueness is easily achieved by using a UUID, as specified in RFC 4122, for the mRID. The use of UUID is strongly recommended.
For CIMXML data files in RDF syntax conforming to IEC 61970-552, the mRID is mapped to rdf:ID or rdf:about attributes that identify CIM object elements.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.mRID`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.mRID,&#10548;>>
--
////


//[discrete]
[#name]
=== `name`
+++The name is any free human readable and possibly non unique text naming the object.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.name`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.name,&#10548;>>
--
////


//[discrete]
[#Names]
=== `Names`
+++All names of this identified object.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.Names`
| Cardinality
| 0..*
| Type
| xref::class/Name.adoc[`Name`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.Names,&#10548;>>
--
////


//[discrete]
[#plantTransferDateTime]
=== `plantTransferDateTime`
+++Date and time asset's financial value was put in plant for regulatory accounting purposes (e.g., for rate base calculations). This is sometime referred to as the "in-service date".+++


[cols="h,4",width=65%]
|===
| URI
| `cim:FinancialInfo.plantTransferDateTime`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Date[`date`]


|===

////
[.text-left]
--
<<slots_table.plantTransferDateTime,&#10548;>>
--
////


//[discrete]
[#PropertiesCIMDataObject]
=== `PropertiesCIMDataObject`
+++The single CIM data object in the appropriate dataset context.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.PropertiesCIMDataObject`
| Cardinality
| 0..1
| Type
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.PropertiesCIMDataObject,&#10548;>>
--
////


//[discrete]
[#purchaseDateTime]
=== `purchaseDateTime`
+++Date and time asset was purchased.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:FinancialInfo.purchaseDateTime`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Date[`date`]


|===

////
[.text-left]
--
<<slots_table.purchaseDateTime,&#10548;>>
--
////


//[discrete]
[#purchaseOrderNumber]
=== `purchaseOrderNumber`
+++Purchase order identifier.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:FinancialInfo.purchaseOrderNumber`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]


|===

////
[.text-left]
--
<<slots_table.purchaseOrderNumber,&#10548;>>
--
////


//[discrete]
[#quantity]
=== `quantity`
+++The quantity of the asset if per unit length, for example conductor.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:FinancialInfo.quantity`
| Cardinality
| 0..1
| Type
| xref::class/IntegerQuantity.adoc[`IntegerQuantity`]


|===

////
[.text-left]
--
<<slots_table.quantity,&#10548;>>
--
////


//[discrete]
[#TargetingCIMDataObject]
=== `TargetingCIMDataObject`
+++Data objects registered.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.TargetingCIMDataObject`
| Cardinality
| 0..*
| Type
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.TargetingCIMDataObject,&#10548;>>
--
////


//[discrete]
[#valueDateTime]
=== `valueDateTime`
+++Date and time at which the financial value was last established.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:FinancialInfo.valueDateTime`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Date[`date`]


|===

////
[.text-left]
--
<<slots_table.valueDateTime,&#10548;>>
--
////


//[discrete]
[#warrantyEndDateTime]
=== `warrantyEndDateTime`
+++Date and time warranty on asset expires.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:FinancialInfo.warrantyEndDateTime`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Date[`date`]


|===

////
[.text-left]
--
<<slots_table.warrantyEndDateTime,&#10548;>>
--
////





== Used by


[cols="1,1",width=65%]
|===
| Source class | Slot name



| xref::class/Asset.adoc[`Asset`] | xref::class/Asset.adoc#FinancialInfo[`FinancialInfo`]


|===

